Cleaned up deprecated newInstance() calls and raw types.